orderForm.css,style.css
css: content add padding

--- a/orderForm.html
+++ b/orderForm.html
@@ -6,49 +6,44 @@
 <head>
   <title>Sock Exchange</title>
   <link rel="stylesheet" type="text/css" href="css/style.css" />
+  <link rel="stylesheet" type="text/css" href="css/orderForm.css" />
 </head>
 
 <body>
   <div id="container">
     <!--#include virtual="common/navBar.html"-->
     <div class="content">
-      <h1>Place an Order</h1>
+      <h1>Choose pairs of Socks from our sock offerings</h1></br></br>
+      <div class="sockGroup">
+        <img src='images/rotate/4.jpg' alt="Argyle Sock" height=300 width=265 />
+        <input type="number" id="argyle" name="argyle" max="999"s value="0" size="3"/>
+      </div><!--div class="sockGroup"-->
+      <div class="sockGroup">
+        <img src='images/rotate/3.jpg' alt="Checkered Sock" height=300 width=265 />
+        <input type="number" id="checkered" name="checkered" max="999" value="0" size="3"/>
+      </div><!--div class="sockGroup"-->
+      <div class="sockGroup">
+        <img src='images/rotate/2.jpg' alt="Striped Sock" height=300 width=265 />
+        <input type="number" id="striped" name="striped" max="999" value="0" size="3"/>
+      </div><!--div class="sockGroup"-->
+      <div class="sockGroup">
+        <img src='images/rotate/5.jpg' alt="Alpaca Sock" height=300 width=265 />
+        <input type="number" id="alpaca" name="alpaca" max="999" value="0" size="3"/>
+      </div><!--div class="sockGroup"-->
+      <div class="sockGroup">
+        <img src='images/rotate/1.jpg' alt="Solid Sock" height=300 width=265 />
+        <input type="number" id="solid" name="solid" max="999" value="0" size="3"/>
+      </div><!--div class="sockGroup"-->
+      <div class="sockGroup">
+        <img src='images/rotate/6.jpg' alt="Obama Sock" height=300 width=265 />
+        <input type="number" id="obama" name="obama" max="999" value="0" size="3"/>
+      </div><!--div class="sockGroup"-->
+      <div class="sockGroup">
+        <img src='images/rotate/7.jpg' alt="Bad Ass Sock" height=300 width=265 />
+        <input type="number" id="badAss" name="badAss" max="999" value="0" size="3"/>
+      </div><!--div class="sockGroup"-->
       <form id='orderForm'>
-        <fieldset>
-          <legend>Shopping list</legend>
-          <label for="sockGroup">How many of each sock do you need to purchase?(in pairs)</label></br>
-          <div class="sockGroup">
-            <img src='images/rotate/4.jpg' alt="Argyle Sock" height=300 width=265 />
-            <input type="number" id="argyle" name="argyle" max="999"s value="0"/>
-          </div>
-          <div class="sockGroup">
-            <img src='images/rotate/3.jpg' alt="Checkered Sock" height=300 width=265 />
-            <input type="number" id="checkered" name="checkered" max="999" value="0"/>
-          </div>
-          <div class="sockGroup">
-            <img src='images/rotate/2.jpg' alt="Striped Sock" height=300 width=265 />
-            <input type="number" id="striped" name="striped" max="999" value="0"/>
-          </div>
-          <div class="sockGroup">
-            <img src='images/rotate/5.jpg' alt="Alpaca Sock" height=300 width=265 />
-            <input type="number" id="alpaca" name="alpaca" max="999" value="0"/>
-          </div>
-          <div class="sockGroup">
-            <img src='images/rotate/1.jpg' alt="Solid Sock" height=300 width=265 />
-            <input type="number" id="solid" name="solid" max="999" value="0"/>
-          </div>
-          <div class="sockGroup">
-            <img src='images/rotate/6.jpg' alt="Obama Sock" height=300 width=265 />
-            <input type="number" id="obama" name="obama" max="999" value="0"/>
-          </div>
-          <div class="sockGroup">
-            <img src='images/rotate/7.jpg' alt="Bad Ass Sock" height=300 width=265 />
-            <input type="number" id="badAss" name="badAss" max="999" value="0"/>
-          </div>
-        </fieldset><!--<legend>Shopping list</legend>-->
-        <fieldset>
-          <legend></legend>
-        </fieldset><!--<legend>Shopping list</legend>-->
+        <h1>Place an Order</h1>
         <fieldset>
           <legend>Shipping Information</legend>
             <label for="email">Email: </label>
